--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #Banco de dados
-3spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-3spring.datasource.username=admin
-3spring.datasource.url=jdbc:mysql://localhost:3306/test
-3spring.jpa.hibernate.ddl-auto=update
-3spring.jpa.show-sql=true
-3spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 #Banco em memoria
