--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,26 @@
 #Banco de dados
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.username=admin
-#spring.datasource.url=jdbc:mysql://localhost:3306/test
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=java@123
+spring.datasource.url=jdbc:mysql://localhost:3306/melao
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 #Banco em memoria
-spring.datasource.url=jdbc:h2:~/file/melao;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.platform=h2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.datasource.initialize=true 
-spring.error.whitelabel.enabled=true
-spring.h2.console.path=/console
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=update
-spring.hibernate.hbm2ddl.auto=update
-spring.hibernate.show_sql=true
+#spring.datasource.url=jdbc:h2:~/file/melao;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.platform=h2
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.datasource.initialize=true 
+#spring.error.whitelabel.enabled=true
+#spring.h2.console.path=/console
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.continue-on-error=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.hibernate.hbm2ddl.auto=update
+#spring.hibernate.show_sql=true
