--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,18 +8,20 @@
 
 
 #Banco em memoria
-spring.datasource.url=jdbc:h2:~/file/melao-test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:~/file/melao-test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.datasource.initialize=true 
-spring.error.whitelabel.enabled=true
+#spring.error.whitelabel.enabled=true
 spring.h2.console.path=/console
-spring.jpa.hibernate.ddl-auto=none
 spring.datasource.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=update
-spring.hibernate.hbm2ddl.auto=update
-spring.hibernate.show_sql=true
+#spring.hibernate.hbm2ddl.auto=update
+#spring.hibernate.show_sql=true
+
+spring.flyway.enabled=false
+
+#spring.flyway.schemas=PUBLIC
+#spring.flyway.baseline-on-migrate=true
