--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,27 +1,32 @@
-#Banco de dados
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.username=admin
-#spring.datasource.url=jdbc:mysql://localhost:3306/test
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 
 
 #Banco em memoria
-spring.datasource.url=jdbc:h2:~/file/melao-test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=true
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:c59f773c-8d92-4bf4-af04-31dd2902403f;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false', username='sa'
+#spring.datasource.username = sa
+#spring.datasource.password =
+#spring.datasource.driverClassName = org.h2.Driver
+#spring.datasource.platform=h2
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/console
+#spring.datasource.continue-on-error=true
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=none
+#spring.flyway.enabled=false
+
+#spring.flyway.schemas=test
+#spring.flyway.baseline-on-migrate=true
+#spring.flyway.locations=classpath:db/migration/H2
+logging.level.org.springframework.web=DEBUG
+server.port=8080
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:file:~/melao2
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.platform=h2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-#spring.error.whitelabel.enabled=true
-spring.h2.console.path=/console
-spring.datasource.continue-on-error=true
-#spring.hibernate.hbm2ddl.auto=update
-#spring.hibernate.show_sql=true
-
-spring.flyway.enabled=false
-
-#spring.flyway.schemas=PUBLIC
-#spring.flyway.baseline-on-migrate=true
+spring.datasource.driver-class-name=org.h2.Driver
+spring.flyway.baseline-on-migrate=true
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.locations=classpath:db/migration/H2
+#spring.flyway.url=jdbc:h2:file:~/melao2
