--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
 			<version>4.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>4.0.0-2</version>
+		</dependency>
+
+
+
 
 	</dependencies>
 
