--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,15 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=mysql://bafafef6f7bdbf:3d8f6063@us-cdbr-iron-east-05.cleardb.net/heroku_bce2975bba97113?reconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=info
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
+spring.flyway.baseline-on-migrate=true
+spring.flyway.schemas=test
 
 
