--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,15 +1,5 @@
+sprispring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=mysql://bafafef6f7bdbf:3d8f6063@us-cdbr-iron-east-05.cleardb.net/heroku_bce2975bba97113?reconnect=true
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=info
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-
-
-spring.flyway.baseline-on-migrate=true
-spring.flyway.schemas=test
-
-
