--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 #logging.level.root=DEBUG
 #Banco de dados
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=admin
-#spring.datasource.password=java@123
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=java@123
+spring.datasource.url=jdbc:mysql://192.168.99.100:3306/desenv
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
