--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -18,15 +18,12 @@
 #spring.flyway.schemas=test
 #spring.flyway.baseline-on-migrate=true
 #spring.flyway.locations=classpath:db/migration/H2
-logging.level.org.springframework.web=DEBUG
-server.port=8080
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:file:~/melao2
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.flyway.baseline-on-migrate=true
+#logging.level.org.springframework.web=DEBUG
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+#spring.datasource.password=java@123
+spring.datasource.url=jdbc:mysql://192.168.99.100:3307/test
 spring.jpa.hibernate.ddl-auto=none
-spring.flyway.locations=classpath:db/migration/H2
-#spring.flyway.url=jdbc:h2:file:~/melao2
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.flyway.locations=classpath:db/migration/MYSQL_TESTE
