--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #logging.level.org.springframework.web=DEBUG
 #logging.level.root=DEBUG
 #Banco de dados
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=java@123
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/desenv
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=java@123
+#spring.datasource.url=jdbc:mysql://192.168.99.100:3306/desenv
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 #Banco em memoria
@@ -24,3 +24,15 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.hibernate.ddl-auto=update
 #spring.hibernate.hbm2ddl.auto=update
 #spring.hibernate.show_sql=true
+#flyway.enabled=false
+
+# H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/console
+## Datasource
+#spring.datasource.url=jdbc:h2:file:~/test
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+flyway.enabled=false
+logging.level.org.springframework.web=DEBUG
