--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,18 +12,19 @@
 #spring.h2.console.path=/console
 #spring.datasource.continue-on-error=true
 #spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create
 #spring.flyway.enabled=false
 
 #spring.flyway.schemas=test
 #spring.flyway.baseline-on-migrate=true
 #spring.flyway.locations=classpath:db/migration/H2
 #logging.level.org.springframework.web=DEBUG
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=root
 #spring.datasource.password=java@123
-spring.datasource.url=jdbc:mysql://192.168.99.100:3307/test
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.flyway.locations=classpath:db/migration/MYSQL_TESTE
+#spring.datasource.url=jdbc:mysql://192.168.99.100:3307/test
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.flyway.locations=classpath:db/migration/MYSQL_TESTE
+#spring.flyway.enabled=false
