Ajustes dos testes

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -27,4 +27,4 @@
 #spring.jpa.show-sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.flyway.locations=classpath:db/migration/MYSQL_TESTE
-#spring.flyway.enabled=false
+spring.flyway.enabled=false
