--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,4 +3,4 @@ spring.datasource.url=mysql://bafafef6f7bdbf:3d8f6063@us-cdbr-iron-east-05.clear
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-flyway.enabled=false
+#flyway.enabled=false
