--- a/pom.xml
+++ b/pom.xml
@@ -78,11 +78,11 @@
 
 
 		<!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-			<version>4.2.0</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.flywaydb</groupId>-->
+			<!--<artifactId>flyway-core</artifactId>-->
+			<!--<version>4.2.0</version>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>org.webjars</groupId>
