--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,5 @@
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.datasource.driver-class-name=org.h2.Driver
-flyway.enabled=false
+#flyway.enabled=false
 logging.level.org.springframework.web=DEBUG
