Ajustes do login

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 sprispring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=mysql://bafafef6f7bdbf:3d8f6063@us-cdbr-iron-east-05.cleardb.net/heroku_bce2975bba97113?reconnect=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
