--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #logging.level.org.springframework.web=DEBUG
 #logging.level.root=DEBUG
 #Banco de dados
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=java@123
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/desenv
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=java@123
+#spring.datasource.url=jdbc:mysql://192.168.99.100:3306/desenv
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 #Banco em memoria
